--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# NEXT_PUBLIC_BACKEND_API=http://localhost:5000/api
-NEXT_PUBLIC_BACKEND_API=https://api.arnaskincare.in/api
+NEXT_PUBLIC_BACKEND_API=http://localhost:5000/api
+# NEXT_PUBLIC_BACKEND_API=https://api.arnaskincare.in/api
